# CocCocTest_Search_Engine

./: .gitignore  CMakeLists.txt  README.md
include/: invertedIndex.hpp  search.hpp  tokenize.hpp
src/: invertedIndex.cpp  main.cpp  search.cpp  tokenize.cpp
test/: file2.txt  file4.txt
